--- a/g-lobbydsn.css
+++ b/g-lobbydsn.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: "Tamba Sans";
-    src: url(TambaSansDemo-Bold.otf);
+    src: url('TambaSansDemo-Bold.otf');
 }
 
 
